Fixed Material deletion
Fixed addition of Supplier